# PrincipleGraph

./: CMakeLists.txt  README.md  run_this_in_bin.sh
data/: OP7_trunc.dens
src/: PrincipleGraph.cpp  pointset.cpp  pointset.h
tests/: testPointset.cpp
